--- a/Youtube_Comments_proj/Youtube-scrap.ipynb
+++ b/Youtube_Comments_proj/Youtube-scrap.ipynb
@@ -11,7 +11,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from tqdm .notebook import tqdm\n",
-    "api_key = \"\" #'AIzaSyAMPRI3bg8y0IncDh5_kIIvVTWs5hDFbkc'\n",
+    "api_key = \"\" #'--------'\n",
     "youtube = build('youtube', 'v3',developerKey=api_key)"
    ]
   },
